Revision history for {{$dist->name}}

{{$NEXT}}

0.04      2017-07-31 15:13:02 -0400
  - Require Perl 5.10.1

0.03      2017-07-22 23:51:04 -0400
  - Remove dependency on File::HomeDir

0.02      2017-07-12 16:46:05 -0400
  - Added abcache command line interface
  - Fixed bug where filename for cached copy would always be 'data'
  - Internal cache directory format has changed, remove your old 
    ~/.alienbuild/plugin_fetch_cache directory

0.01      2017-02-02 22:15:26 -0500
  - initial version