@@ -17,25 +17,35 @@ jobs:
       fail-fast: false
       matrix:
         cip_tag:
-          - static
-          - "5.37"
-          - "5.36"
-          - "5.34"
-          - "5.32"
-          - "5.30"
-          - "5.28"
-          - "5.26"
-          - "5.24"
-          - "5.22"
-          - "5.20"
-          - "5.18"
-          - "5.16"
-          - "5.14"
-          - "5.12"
-          - "5.10.1"
+          - tag: "5.37"
+          - tag: "5.36"
+            env: ALIEN_DOWNLOAD_RULE=warn
+          - tag: "5.36"
+            env: ALIEN_DOWNLOAD_RULE=digest
+          - tag: "5.36"
+            env: ALIEN_DOWNLOAD_RULE=encrypt
+          - tag: "5.36"
+            env: ALIEN_DOWNLOAD_RULE=digest_or_encrypt
+          - tag: "5.36"
+            env: ALIEN_DOWNLOAD_RULE=digest_and_encrypt
+          - tag: "5.36"
+          - tag: "5.34"
+          - tag: "5.32"
+          - tag: "5.30"
+          - tag: "5.28"
+          - tag: "5.26"
+          - tag: "5.24"
+          - tag: "5.22"
+          - tag: "5.20"
+          - tag: "5.18"
+          - tag: "5.16"
+          - tag: "5.14"
+          - tag: "5.12"
+          - tag: "5.10.1"
 
     env:
-      CIP_TAG: ${{ matrix.cip_tag }}
+      CIP_TAG: ${{ matrix.cip.tag }}
+      CIP_ENV: ${{ matrix.cip.env }}
 
     steps:
       - uses: actions/checkout@v2
